# libserialdata

./: Makefile.am  blockhead.proto  configure.ac  read_write_test.cc  serialdatareader.cc  serialdatareader.h  serialdatawriter.cc  serialdatawriter.h
testdata/: vicky.ser
